<resources>
    <string name="app_name">TPLearningEnglish</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Anasayfa</string>
    <string name="menu_words">Kelimeler</string>
    <string name="menu_speaking">Konuşma</string>
    <string name="menu_reading">Metin Okuma</string>
    <string name="menu_settings">Ayarlar</string>
    <string name="menu_about">Hakkında</string>
    <string name="menu_help">Yardım</string>
</resources>